Bug 148289 - line break attribute "clear" renders wrong in tb-rl (CJK) writing mode
Summary: line break attribute "clear" renders wrong in tb-rl (CJK) writing mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.1
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-31 11:51 UTC by Regina Henschel
Modified: 2022-08-22 09:37 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
New feature line break attribute clear in tb-rl (19.07 KB, application/zip)
2022-03-31 11:51 UTC, Regina Henschel
Details
Screenshot compare Word with LO (39.01 KB, image/png)
2022-03-31 11:52 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-03-31 11:51:19 UTC
Created attachment 179232 [details]
New feature line break attribute clear in tb-rl

Using the new line break attribute "clear" in a document with tb-rl writing mode has wrong line spacing.
Use the attached document and compare rendering in Word and in LibreOffice.

I see the problem in Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a3988b2d147a2442b348d58b79dbd6e71472b7af
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL
Comment 1 Regina Henschel 2022-03-31 11:52:08 UTC
Created attachment 179233 [details]
Screenshot compare Word with LO
Comment 2 Commit Notification 2022-08-15 18:43:41 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/251589c17c0dfa33cf5e5e5bb1ed782d2293a67c

tdf#148289 sw clearing breaks: fix vertical layout

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-08-22 09:37:53 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/11d0ac7643b2a558a84931ac38e0e77b48e1e380

tdf#148289 sw clearing breaks: fix vertical layout

It will be available in 7.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.