tdf#148289 sw clearing breaks: fix vertical layout

There were 3 problems here:

1) SwTextFly::GetMaxBottom() gets an already swapped frame, so going via
   the aRectFnSet abstraction is not correct, need to use Left() and
   similar functions directly.

2) SwTextCursor::AdjustBaseLine() centers portions in the vertical case,
   so a clearing break portion with larger height will push the other
   portions towards the left, and this is not wanted. Fix this by
   filtering out the (logic) height of the clearing break portions in
   the vertical case.

3) The fix for 2) has the side effect that the non-printable line break
   indicator character now has the wrong (logic) top position in
   SwBreakPortion::Paint(). Fix this by compensating for the offset done in
   AdjustBaseLine().

No functional changes intended for the horizontal layout.

(cherry picked from commit 251589c17c0dfa33cf5e5e5bb1ed782d2293a67c)

Change-Id: I9ea27b4247944cbab8e96c5c5e2c8f82bbbd731c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138339
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>